--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Arial', sans-serif; /* Choose an appropriate font */
-  background-color: #f5f5f5; /* Set a light background color */
-  color: #333; /* Set the default text color */
-}
-
-.Search-engine {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  margin-bottom: 30px;
-  margin-top: 20px; /* Adjust the margin for better spacing */
-}
-
-.Search-engine input {
-  width: 70%;
-  height: 45px;
-  border: 1px solid #ccc; /* Add a subtle border color */
-  border-radius: 8px;
-  padding: 2px 15px;
-  font-size: 16px;
-  outline: none;
-  background-color: #fff;
-  color: #333;
-}
-
-.Search-engine button {
-  border: none;
-  border-radius: 8px;
-  background-color: #007bff; /* Set a blue background color */
-  color: #fff;
-  font-size: 20px;
-  outline: none;
-  cursor: pointer;
-  padding: 12px 15px;
-  transition: background-color 0.3s ease; /* Add a smooth transition effect */
-}
-
-.Search-engine button:hover {
-  background-color: #0056b3; /* Darker blue on hover */
-}
-
-/* Additional styling for Weather component */
-.city-name {
-  margin-top: 10px;
-}
-
-.weather-info {
-  margin-top: 20px;
-}
-
-.description {
-  margin-top: 10px;
-  font-style: italic;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
